[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scenes/Enemy_4.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scenes/Enemy_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scripts/Wave4_Fat.gd" type="Script" id=3]
[ext_resource path="res://assets/scenes/Enemy_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/HUD/Wave_End/Wave_Anim.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/fat.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512.08, 360 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0901961, 1, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Wave4" type="Node2D"]
script = ExtResource( 3 )
wave_change_scene = ExtResource( 5 )
enemy1_scene = ExtResource( 4 )
enemy2_scene = ExtResource( 2 )
enemy4_scene = ExtResource( 1 )
speed = 6

[node name="Left" type="Node2D" parent="."]
z_index = 1

[node name="Sprite" type="Sprite" parent="Left"]
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 0, 720 )

[node name="Area2D" type="Area2D" parent="Left"]
position = Vector2( 0, 360 )
scale = Vector2( 1e-05, 1 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Area2D"]
shape = SubResource( 1 )

[node name="Right" type="Node2D" parent="."]
position = Vector2( 1024, 0 )
z_index = 1

[node name="Sprite" type="Sprite" parent="Right"]
position = Vector2( 0, 720 )
rotation = 3.14159
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 0, 720 )

[node name="Area2D" type="Area2D" parent="Right"]
position = Vector2( 0, 360 )
scale = Vector2( 1e-05, 1 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Area2D"]
shape = SubResource( 1 )

[node name="Up" type="Node2D" parent="."]
z_index = 1

[node name="Sprite" type="Sprite" parent="Up"]
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 0 )

[node name="Area2D" type="Area2D" parent="Up"]
position = Vector2( 512, 0 )
scale = Vector2( 1e-05, 1e-05 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up/Area2D"]
shape = SubResource( 1 )

[node name="Down" type="Node2D" parent="."]
position = Vector2( 0, 720 )
z_index = 1

[node name="Sprite" type="Sprite" parent="Down"]
position = Vector2( 1024, 0 )
rotation = 3.14159
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 0 )

[node name="Area2D" type="Area2D" parent="Down"]
position = Vector2( 512, 0 )
scale = Vector2( 1, 1e-05 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down/Area2D"]
shape = SubResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 320.0
margin_top = 672.0
margin_right = 704.0
margin_bottom = 686.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy1_spawn" type="Timer" parent="."]
wait_time = 1.5

[node name="Enemy2_spawn" type="Timer" parent="."]
wait_time = 2.0

[node name="Enemy4_spawn" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="Left/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Right/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Up/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Down/Area2D" to="." method="_on_Area2D_body_entered"]
